--- a/style/_layout.scss
+++ b/style/_layout.scss
@@ -1,16 +1,3 @@
-$page-margin-width: 2rem;
-$sidebar-width: 20rem;
-$main-content-width: 50rem;
-
-$bp-fold: (max-width: 60rem); // TODO: relative
-$bp-main: (max-width: $main-content-width + $page-margin-width + $sidebar-width);
-$bp-footer: (max-width: 40rem); // TODO: relative
-
-// TODO: automated substitution
-$bp-not-fold: str-replace(quote($bp-fold), 'max', 'min');
-$bp-not-main: str-replace(quote($bp-main), 'max', 'min');
-$bp-not-footer: str-replace(quote($bp-footer), 'max', 'min');
-
 @import 'layout/fold';
 @import 'layout/header';
 @import 'layout/subnav';
