--- a/style/_reset.scss
+++ b/style/_reset.scss
@@ -1,4 +1,5 @@
 $active-link: '&:hover, &:focus, &.active';
+$divider: thin solid rgba(255, 255, 255, 0.5);
 
 body {
 	margin: 0;
