--- a/style/layout/_fixed_header.scss
+++ b/style/layout/_fixed_header.scss
@@ -8,5 +8,5 @@ header {
 }
 
 .fold {
-	padding-top: $page-margin-width + 3rem;
+	padding-top: $page-margin-width + 4rem;
 }
